# FUZOJ

./: .gitignore  .gitmodules  AGENTS.md  Agent.md  README.md  bmi.py  feature.md  go.mod  go.sum  sandbox-init
.github/workflows/: coverage.yml  test.yml
Judge/: CMakeLists.txt  build.sh  compile_commands.json  require.sh
Judge/.cache/clangd/index/: CGroup.cc.01DA85A6143FC1B3.idx  CGroup.h.6917DEFF38E36F89.idx  CppJudger.cc.3F4886EBDF84A602.idx  CppJudger.cc.5057E28326D29E22.idx  CppJudger.h.D04C3BAC0195C737.idx  CppJudger.h.D196197E29210D38.idx  Judger.cc.C603CA68C6063E7D.idx  Judger.h.31D9BDC868C82D3B.idx  JudgerFactory.cc.7BB7CF4D01467B1F.idx  JudgerFactory.h.EC96F7C6D4343CB3.idx  Logger.cc.E3317E91393E6809.idx  Logger.h.B88C677C3D30EC3A.idx  Problem.h.D95A53086237AFD1.idx  PythonJudger.h.938708FA906D3909.idx  Sandbox.cc.615E8B05A72AE03D.idx  Sandbox.cc.90746412628D8845.idx  Sandbox.h.3E2C15FD63038BAB.idx  SandboxTest.cc.53FC866FA6A40677.idx  SandboxTest.cc.CA53FDCE2B3F41FD.idx  Solution.h.63D57C4A3584868A.idx  TestCppJudger.cc.95DDC725A554539E.idx  Types.h.C00C0CC4BA7F379B.idx  Utils.cc.C2119EFF3580F5E6.idx  Utils.h.7859204EA87EBCEC.idx  __stdarg___gnuc_va_list.h.E7A96D54AD172E0A.idx  __stddef_header_macro.h.5D3FC9D2EEFA966E.idx  __stddef_max_align_t.h.822A04A6A47327E0.idx  __stddef_null.h.6E746C2F95557031.idx  __stddef_nullptr_t.h.F9C3F7AA12B6BB47.idx  __stddef_offsetof.h.88AAE972DE9FA3C0.idx  __stddef_ptrdiff_t.h.C36BB291473525FB.idx  __stddef_size_t.h.958441A23045EAB9.idx  __stddef_wchar_t.h.CB7FD7C544D22CE5.idx  align.h.EF3672F59F577484.idx  alloc_traits.h.888093B2650D973C.idx  alloca.h.793370BF9878CFB6.idx  allocated_ptr.h.4C2F2E5344DBBE09.idx  allocator.h.726B26F70D1E9A82.idx  ansicolor_sink.h.4961A74F6C14AF0B.idx  any.B79E1B83E49C33D7.idx  (+243 more)
Judge/src/: CGroup.cc  CGroup.h  CMakeLists.txt  CppJudger.cc  CppJudger.h  Judger.cc  Judger.h  JudgerFactory.cc  JudgerFactory.h  Logger.cc  Logger.h  Problem.h  Sandbox.cc  Sandbox.h  Solution.h  Types.h  Utils.cc  cgroup.cc  cgroup.h  file_cache.h  fuzoj_utils.cc  fuzoj_utils.h  judge_executor.cc  judge_executor.h  judge_executor_factory.cc  judge_executor_factory.h  judger.cc  judger.h  judger_factory.cc  judger_factory.h  logger.cc  logger.h  main.cc  problem.h  sandbox.cc  sandbox.h  solution.h  status.h  types.h  utils.cc  (+1 more)
Judge/src/Database/: database_pool.cc  database_pool.h
Judge/src/Judger/: CppJudger.cc  CppJudger.h  PythonJudger.h  cpp_judger.cc  cpp_judger.h  python_judger.h
Judge/src/Timer/: timer.h
Judge/test/: CMakeLists.txt  hello_world.py  test.cpp  test_seccomp  test_seccomp.cc
Judge/test/TestCppJudger/: TestCppJudger.cc  judge  judge.cpp  test.cpp  test_cpp_judger.cc  testce.cpp  testfpe.cpp  testmle.cpp  testre.cpp  testtle.cpp  testwa.cpp
Judge/test/TestSandbox/: SandboxTest.cc  hello_world.py  sandbox_test.cc
api/contest/: contest.api
api/judge/: judge.api
api/problem/: problem.api
api/status/: status.api
api/submit/: submit.api
api/user/: user.api
cmd/cli/: main.go
cmd/contest-service/: main.go
cmd/gateway/: config.go  main.go
cmd/judge-service/: config.go  main.go
cmd/problem-service/: config.go  main.go
cmd/sandbox-init/: main.go
cmd/submit-service/: config.go  main.go
configs/: cli.yaml  database.yaml  dev-profile.yaml  gateway.yaml  judge_service.yaml  problem_service.yaml  redis.yaml  submit_service.yaml  user_service.yaml
deploy/: docker-compose.deps.yml  docker-compose.yml
docs/: cli_client.md  contest_dispatch_kafka.md  contest_rank_pipeline.md  contest_submission_eligibility.md  controller_api.md  error-logger-guide.md  frontend_oj_web.md  gateway.md  judge_service.md  judge_worker.md  logging_elk.md  problem_module.md  rank_service.md  rank_update_reliability.md  rank_ws_service.md  registry_center.md  rpc_api.md  sandbox_engine.md  sandbox_runner.md  status_service.md  status_sse_service.md  submit_service.md  todo_contest_rank.md  user_auth_service.md  user_cache_repository.md  user_repository.md  user_token_repository.md
examples/: error_logger_usage.go
judge_service/: judge.go
scripts/: build_services.sh  debug_manifest.yaml  debug_start.py  debug_stop.py  ensure_cgroup_delegate.py  ensure_kafka_topics.py  install_kafka.sh  install_minio.sh  install_mysql.sh  install_redis.sh  start_deps.sh  start_services.sh  status_services.py  stop_deps.sh  stop_services.sh  uninstall_kafka.sh  uninstall_minio.sh  uninstall_mysql.sh  uninstall_redis.sh
sql/: init.sql
tests/: Makefile  README.md  auth_service_e2e_test.go  auth_service_test.go  bench_contest_rank_qps.py  e2e_contest_rank_smoke.py  e2e_submit_smoke.py  error_test.go  example_test.go  helpers.go  killall.sh  main.cpp  main.py  problem_cleanup_service_test.go  problem_upload_service_test.go  runner_cpp_test.go  sandbox_engine_linux_test.go  status_repository_event_test.go  test.yaml  testing_suite.go  worker_test.go
todolist/: contest_module_todo.md
user_service/: user.go
web/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+737 files in other folders)
